# dental-supply-ai-scraper

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-24-frontier-dental-scraper.md
output/: sample_output.json
src/scraper/: browser.py  database.py  graph.py  llm.py  main.py  models.py  schema.sql
tests/: conftest.py  test_browser.py  test_database.py  test_graph.py  test_integration.py  test_llm.py  test_main.py  test_models.py
tests/fixtures/: category_page.html  product_page.html
