[project]
name = "frontier-dental-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4,<1.0",
    "anthropic>=0.42,<1.0",
    "playwright>=1.49,<2.0",
    "pydantic>=2.10,<3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "structlog>=24.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[project.scripts]
scraper = "scraper.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
